# natinterp3d

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: conf.py  gen_figures.py  index.rst  insertion-free.rst  references.bib
docs/_templates/autoapi/python/: class.rst  data.rst  function.rst  method.rst  module.rst  property.rst
docs/explanation/: index.rst
natinterp3d/: Makefile  delaunay.c  delaunay.h  kdtree.c  natinterp3d_cython.c  natinterp3d_cython.pyx  natinterp3d_main.py  natural.c
src/natinterp3d/: __init__.py  delaunay.c  delaunay.h  kdtree.c  kdtree.h  natinterp3d.py  natinterp3d_cython.pyx  natural.c  natural.h  natural_insertionfree.c  natural_insertionfree.h  predicates.c  unity.c  utils.c
tests/: test_natinterp3d.py
