[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cython>=0.27.3",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "natinterp3d"
version = "0.2.1"
description = "Natural Neighbor Interpolation in 3D"
authors = [
    { name = "István Sárándi", email = "istvan.sarandi@uni-tuebingen.de" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy"
]

[project.urls]
Repository = "https://github.com/isarandi/natinterp3d"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]